// Code generated by the tool (https://github.com/trylotus/abi-gen-proto). DO NOT EDIT.
// Source file: <from connector-bot>
syntax = "proto3";

package usercontract0;
option go_package = "github.com/trylotus/connectors/usercontract0";

import "google/protobuf/timestamp.proto";
import "lotus/lotus.proto";

message PairCreated {
	option (lotus.composite).index = {unique: true, type: INDEX_TYPE_ORDERED, fields: ["ts","tx_hash","log_index"]};
	option (lotus.composite).index = {unique: false, type: INDEX_TYPE_ORDERED, fields: ["tx_hash","log_index"]};

	google.protobuf.Timestamp ts = 1;
	uint64 block_number = 2 [(lotus.index) = {unique: false, type: INDEX_TYPE_ORDERED}];
	bytes tx_hash = 3 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
	uint64 log_index = 4;
	bytes token0 = 5 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}]; // original type: address
	bytes token1 = 6 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}]; // original type: address
	bytes pair = 7 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}]; // original type: address
	string arg3 = 8 [(lotus.numeric)={precision: 78}]; // original type: uint256
}

