syntax = "proto3";

package pair;

import "google/protobuf/timestamp.proto";
import "lotus/lotus.proto";

option go_package = "github.com/trylotus/connectors/uniswapv2/pair";

message Approval {
  option (lotus.composite).index = {
    unique: true
    fields: [
      "ts",
      "tx_hash",
      "log_index"
    ]
  };
  option (lotus.composite).index = {
    fields: [
      "tx_hash",
      "log_index"
    ]
  };
  option (lotus.composite).index = {
    fields: [
      "pair",
      "ts"
    ]
  };

  google.protobuf.Timestamp ts = 1;
  uint64 block_number = 2 [(lotus.index) = {}];
  bytes tx_hash = 3 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  uint64 log_index = 4;
  bytes pair = 5 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  bytes owner = 6 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  bytes spender = 7 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  string value = 8 [(lotus.numeric) = {}];
}

message Burn {
  option (lotus.composite).index = {
    unique: true
    fields: [
      "ts",
      "tx_hash",
      "log_index"
    ]
  };
  option (lotus.composite).index = {
    fields: [
      "tx_hash",
      "log_index"
    ]
  };
  option (lotus.composite).index = {
    fields: [
      "pair",
      "ts"
    ]
  };

  google.protobuf.Timestamp ts = 1;
  uint64 block_number = 2 [(lotus.index) = {}];
  bytes tx_hash = 3 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  uint64 log_index = 4;
  bytes pair = 5 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  bytes sender = 6 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  string amount0 = 7 [(lotus.numeric) = {}];
  string amount1 = 8 [(lotus.numeric) = {}];
  bytes to = 9 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
}

message Mint {
  option (lotus.composite).index = {
    unique: true
    fields: [
      "ts",
      "tx_hash",
      "log_index"
    ]
  };
  option (lotus.composite).index = {
    fields: [
      "tx_hash",
      "log_index"
    ]
  };
  option (lotus.composite).index = {
    fields: [
      "pair",
      "ts"
    ]
  };

  google.protobuf.Timestamp ts = 1;
  uint64 block_number = 2 [(lotus.index) = {}];
  bytes tx_hash = 3 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  uint64 log_index = 4;
  bytes pair = 5 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  bytes sender = 6 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  string amount0 = 7 [(lotus.numeric) = {}];
  string amount1 = 8 [(lotus.numeric) = {}];
}

message Swap {
  option (lotus.composite).index = {
    unique: true
    fields: [
      "ts",
      "tx_hash",
      "log_index"
    ]
  };
  option (lotus.composite).index = {
    fields: [
      "tx_hash",
      "log_index"
    ]
  };
  option (lotus.composite).index = {
    fields: [
      "pair",
      "ts"
    ]
  };

  google.protobuf.Timestamp ts = 1;
  uint64 block_number = 2 [(lotus.index) = {}];
  bytes tx_hash = 3 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  uint64 log_index = 4;
  bytes pair = 5 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  bytes sender = 6 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  string amount0_in = 7 [(lotus.numeric) = {}];
  string amount1_in = 8 [(lotus.numeric) = {}];
  string amount0_out = 9 [(lotus.numeric) = {}];
  string amount1_out = 10 [(lotus.numeric) = {}];
  bytes to = 11 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
}

message Sync {
  option (lotus.composite).index = {
    unique: true
    fields: [
      "ts",
      "tx_hash",
      "log_index"
    ]
  };
  option (lotus.composite).index = {
    fields: [
      "tx_hash",
      "log_index"
    ]
  };
  option (lotus.composite).index = {
    fields: [
      "pair",
      "ts"
    ]
  };

  google.protobuf.Timestamp ts = 1;
  uint64 block_number = 2 [(lotus.index) = {}];
  bytes tx_hash = 3 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  uint64 log_index = 4;
  bytes pair = 5 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  string reserve0 = 6 [(lotus.numeric) = {}];
  string reserve1 = 7 [(lotus.numeric) = {}];
}

message Transfer {
  option (lotus.composite).index = {
    unique: true
    fields: [
      "ts",
      "tx_hash",
      "log_index"
    ]
  };
  option (lotus.composite).index = {
    fields: [
      "tx_hash",
      "log_index"
    ]
  };
  option (lotus.composite).index = {
    fields: [
      "pair",
      "ts"
    ]
  };

  google.protobuf.Timestamp ts = 1;
  uint64 block_number = 2 [(lotus.index) = {}];
  bytes tx_hash = 3 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  uint64 log_index = 4;
  bytes pair = 5 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  bytes from = 6 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  bytes to = 7 [(lotus.bytes) = {format: FORMAT_TYPE_HEX}];
  string value = 8 [(lotus.numeric) = {}];
}

message Trade1min {
  option (lotus.view) = {
    topic: "lotus.uniswapv2.0_0_0.pair_Swap"
    materialized: true
    refresh_interval: '1 min'
    options: ["timescaledb.continuous"]
    group_by: [
      "t",
      "pair"
    ]
    where: "(amount0_in + amount0_out) > 0"
  };

  option (lotus.composite).index = {
    fields: [
      "pair",
      "t"
    ]
  };

  google.protobuf.Timestamp t = 1 [(lotus.projection) = "time_bucket('1 min', ts)"];
  bytes pair = 2 [
    (lotus.projection) = "pair",
    (lotus.bytes) = {format: FORMAT_TYPE_HEX}
  ];
  string open_price = 3 [
    (lotus.projection) = "first((amount1_in + amount1_out) / (amount0_in + amount0_out), ts)",
    (lotus.numeric) = {}
  ];
  string high_price = 4 [
    (lotus.projection) = "max((amount1_in + amount1_out) / (amount0_in + amount0_out))",
    (lotus.numeric) = {}
  ];
  string low_price = 5 [
    (lotus.projection) = "min((amount1_in + amount1_out) / (amount0_in + amount0_out))",
    (lotus.numeric) = {}
  ];
  string close_price = 6 [
    (lotus.projection) = "last((amount1_in + amount1_out) / (amount0_in + amount0_out), ts)",
    (lotus.numeric) = {}
  ];
  int64 tx_count = 7 [(lotus.projection) = "count(*)"];
  string volume0_buy = 8 [
    (lotus.projection) = "sum(amount0_out)",
    (lotus.numeric) = {}
  ];
  string volume0_sell = 9 [
    (lotus.projection) = "sum(amount0_in)",
    (lotus.numeric) = {}
  ];
  string volume1_buy = 10 [
    (lotus.projection) = "sum(amount1_out)",
    (lotus.numeric) = {}
  ];
  string volume1_sell = 11 [
    (lotus.projection) = "sum(amount1_in)",
    (lotus.numeric) = {}
  ];
}

message Trade10min {
  option (lotus.view) = {
    topic: "lotus.uniswapv2.0_0_0.pair_Swap"
    materialized: true
    refresh_interval: '10 min'
    options: ["timescaledb.continuous"]
    group_by: [
      "t",
      "pair"
    ]
    where: "(amount0_in + amount0_out) > 0"
  };

  option (lotus.composite).index = {
    fields: [
      "pair",
      "t"
    ]
  };

  google.protobuf.Timestamp t = 1 [(lotus.projection) = "time_bucket('10 min', ts)"];
  bytes pair = 2 [
    (lotus.projection) = "pair",
    (lotus.bytes) = {format: FORMAT_TYPE_HEX}
  ];
  string open_price = 3 [
    (lotus.projection) = "first((amount1_in + amount1_out) / (amount0_in + amount0_out), ts)",
    (lotus.numeric) = {}
  ];
  string high_price = 4 [
    (lotus.projection) = "max((amount1_in + amount1_out) / (amount0_in + amount0_out))",
    (lotus.numeric) = {}
  ];
  string low_price = 5 [
    (lotus.projection) = "min((amount1_in + amount1_out) / (amount0_in + amount0_out))",
    (lotus.numeric) = {}
  ];
  string close_price = 6 [
    (lotus.projection) = "last((amount1_in + amount1_out) / (amount0_in + amount0_out), ts)",
    (lotus.numeric) = {}
  ];
  int64 tx_count = 7 [(lotus.projection) = "count(*)"];
  string volume0_buy = 8 [
    (lotus.projection) = "sum(amount0_out)",
    (lotus.numeric) = {}
  ];
  string volume0_sell = 9 [
    (lotus.projection) = "sum(amount0_in)",
    (lotus.numeric) = {}
  ];
  string volume1_buy = 10 [
    (lotus.projection) = "sum(amount1_out)",
    (lotus.numeric) = {}
  ];
  string volume1_sell = 11 [
    (lotus.projection) = "sum(amount1_in)",
    (lotus.numeric) = {}
  ];
}

message Trade1h {
  option (lotus.view) = {
    topic: "lotus.uniswapv2.0_0_0.pair_Swap"
    materialized: true
    refresh_interval: '10 min'
    options: ["timescaledb.continuous"]
    group_by: [
      "t",
      "pair"
    ]
    where: "(amount0_in + amount0_out) > 0"
  };

  option (lotus.composite).index = {
    fields: [
      "pair",
      "t"
    ]
  };

  google.protobuf.Timestamp t = 1 [(lotus.projection) = "time_bucket('1 hour', ts)"];
  bytes pair = 2 [
    (lotus.projection) = "pair",
    (lotus.bytes) = {format: FORMAT_TYPE_HEX}
  ];
  string open_price = 3 [
    (lotus.projection) = "first((amount1_in + amount1_out) / (amount0_in + amount0_out), ts)",
    (lotus.numeric) = {}
  ];
  string high_price = 4 [
    (lotus.projection) = "max((amount1_in + amount1_out) / (amount0_in + amount0_out))",
    (lotus.numeric) = {}
  ];
  string low_price = 5 [
    (lotus.projection) = "min((amount1_in + amount1_out) / (amount0_in + amount0_out))",
    (lotus.numeric) = {}
  ];
  string close_price = 6 [
    (lotus.projection) = "last((amount1_in + amount1_out) / (amount0_in + amount0_out), ts)",
    (lotus.numeric) = {}
  ];
  int64 tx_count = 7 [(lotus.projection) = "count(*)"];
  string volume0_buy = 8 [
    (lotus.projection) = "sum(amount0_out)",
    (lotus.numeric) = {}
  ];
  string volume0_sell = 9 [
    (lotus.projection) = "sum(amount0_in)",
    (lotus.numeric) = {}
  ];
  string volume1_buy = 10 [
    (lotus.projection) = "sum(amount1_out)",
    (lotus.numeric) = {}
  ];
  string volume1_sell = 11 [
    (lotus.projection) = "sum(amount1_in)",
    (lotus.numeric) = {}
  ];
}

message Trade1d {
  option (lotus.view) = {
    topic: "lotus.uniswapv2.0_0_0.pair_Swap"
    materialized: true
    refresh_interval: '1 hour'
    options: ["timescaledb.continuous"]
    group_by: [
      "t",
      "pair"
    ]
    where: "(amount0_in + amount0_out) > 0"
  };

  option (lotus.composite).index = {
    fields: [
      "pair",
      "t"
    ]
  };

  google.protobuf.Timestamp t = 1 [(lotus.projection) = "time_bucket('1 day', ts)"];
  bytes pair = 2 [
    (lotus.projection) = "pair",
    (lotus.bytes) = {format: FORMAT_TYPE_HEX}
  ];
  string open_price = 3 [
    (lotus.projection) = "first((amount1_in + amount1_out) / (amount0_in + amount0_out), ts)",
    (lotus.numeric) = {}
  ];
  string high_price = 4 [
    (lotus.projection) = "max((amount1_in + amount1_out) / (amount0_in + amount0_out))",
    (lotus.numeric) = {}
  ];
  string low_price = 5 [
    (lotus.projection) = "min((amount1_in + amount1_out) / (amount0_in + amount0_out))",
    (lotus.numeric) = {}
  ];
  string close_price = 6 [
    (lotus.projection) = "last((amount1_in + amount1_out) / (amount0_in + amount0_out), ts)",
    (lotus.numeric) = {}
  ];
  int64 tx_count = 7 [(lotus.projection) = "count(*)"];
  string volume0_buy = 8 [
    (lotus.projection) = "sum(amount0_out)",
    (lotus.numeric) = {}
  ];
  string volume0_sell = 9 [
    (lotus.projection) = "sum(amount0_in)",
    (lotus.numeric) = {}
  ];
  string volume1_buy = 10 [
    (lotus.projection) = "sum(amount1_out)",
    (lotus.numeric) = {}
  ];
  string volume1_sell = 11 [
    (lotus.projection) = "sum(amount1_in)",
    (lotus.numeric) = {}
  ];
}

message Trade1mon {
  option (lotus.view) = {
    topic: "lotus.uniswapv2.0_0_0.pair_Swap"
    materialized: true
    refresh_interval: '1 hour'
    options: ["timescaledb.continuous"]
    group_by: [
      "t",
      "pair"
    ]
    where: "(amount0_in + amount0_out) > 0"
  };

  option (lotus.composite).index = {
    fields: [
      "pair",
      "t"
    ]
  };

  google.protobuf.Timestamp t = 1 [(lotus.projection) = "time_bucket('1 month', ts)"];
  bytes pair = 2 [
    (lotus.projection) = "pair",
    (lotus.bytes) = {format: FORMAT_TYPE_HEX}
  ];
  string open_price = 3 [
    (lotus.projection) = "first((amount1_in + amount1_out) / (amount0_in + amount0_out), ts)",
    (lotus.numeric) = {}
  ];
  string high_price = 4 [
    (lotus.projection) = "max((amount1_in + amount1_out) / (amount0_in + amount0_out))",
    (lotus.numeric) = {}
  ];
  string low_price = 5 [
    (lotus.projection) = "min((amount1_in + amount1_out) / (amount0_in + amount0_out))",
    (lotus.numeric) = {}
  ];
  string close_price = 6 [
    (lotus.projection) = "last((amount1_in + amount1_out) / (amount0_in + amount0_out), ts)",
    (lotus.numeric) = {}
  ];
  int64 tx_count = 7 [(lotus.projection) = "count(*)"];
  string volume0_buy = 8 [
    (lotus.projection) = "sum(amount0_out)",
    (lotus.numeric) = {}
  ];
  string volume0_sell = 9 [
    (lotus.projection) = "sum(amount0_in)",
    (lotus.numeric) = {}
  ];
  string volume1_buy = 10 [
    (lotus.projection) = "sum(amount1_out)",
    (lotus.numeric) = {}
  ];
  string volume1_sell = 11 [
    (lotus.projection) = "sum(amount1_in)",
    (lotus.numeric) = {}
  ];
}

message Trade1y {
  option (lotus.view) = {
    topic: "lotus.uniswapv2.0_0_0.pair_Swap"
    materialized: true
    refresh_interval: '1 hour'
    options: ["timescaledb.continuous"]
    group_by: [
      "t",
      "pair"
    ]
    where: "(amount0_in + amount0_out) > 0"
  };

  option (lotus.composite).index = {
    fields: [
      "pair",
      "t"
    ]
  };

  google.protobuf.Timestamp t = 1 [(lotus.projection) = "time_bucket('1 year', ts)"];
  bytes pair = 2 [
    (lotus.projection) = "pair",
    (lotus.bytes) = {format: FORMAT_TYPE_HEX}
  ];
  string open_price = 3 [
    (lotus.projection) = "first((amount1_in + amount1_out) / (amount0_in + amount0_out), ts)",
    (lotus.numeric) = {}
  ];
  string high_price = 4 [
    (lotus.projection) = "max((amount1_in + amount1_out) / (amount0_in + amount0_out))",
    (lotus.numeric) = {}
  ];
  string low_price = 5 [
    (lotus.projection) = "min((amount1_in + amount1_out) / (amount0_in + amount0_out))",
    (lotus.numeric) = {}
  ];
  string close_price = 6 [
    (lotus.projection) = "last((amount1_in + amount1_out) / (amount0_in + amount0_out), ts)",
    (lotus.numeric) = {}
  ];
  int64 tx_count = 7 [(lotus.projection) = "count(*)"];
  string volume0_buy = 8 [
    (lotus.projection) = "sum(amount0_out)",
    (lotus.numeric) = {}
  ];
  string volume0_sell = 9 [
    (lotus.projection) = "sum(amount0_in)",
    (lotus.numeric) = {}
  ];
  string volume1_buy = 10 [
    (lotus.projection) = "sum(amount1_out)",
    (lotus.numeric) = {}
  ];
  string volume1_sell = 11 [
    (lotus.projection) = "sum(amount1_in)",
    (lotus.numeric) = {}
  ];
}
